--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; jaxprop v0.5.0 documentation</title>
+    <title>Index &#8212; jaxprop v0.5.1 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="_static/documentation_options.js?v=91ffe994"></script>
+    <script src="_static/documentation_options.js?v=2a036b89"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">jaxprop v0.5.0 documentation</p>
+    <p class="title logo__title">jaxprop v0.5.1 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -934,20 +934,12 @@ document.write(`
 <h2 id="Q">Q</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.quality_mass">quality_mass (jaxprop.helpers_props.FluidState attribute)</a>
-
-      <ul>
-        <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.quality_mass">(jaxprop.helpers_props.MixtureState attribute)</a>
+      <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.quality_mass">quality_mass (jaxprop.helpers_props.MixtureState attribute)</a>
 </li>
-      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.quality_volume">quality_volume (jaxprop.helpers_props.FluidState attribute)</a>
-
-      <ul>
-        <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.quality_volume">(jaxprop.helpers_props.MixtureState attribute)</a>
+      <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.quality_volume">quality_volume (jaxprop.helpers_props.MixtureState attribute)</a>
 </li>
-      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -1066,6 +1058,8 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.BaseState.values">values() (jaxprop.helpers_props.BaseState method)</a>
 </li>
+      <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.vapor_quality">vapor_quality (jaxprop.helpers_props.FluidState attribute)</a>
+</li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.viscosity">viscosity (jaxprop.helpers_props.FluidState attribute)</a>
 
       <ul>
@@ -1075,6 +1069,8 @@ document.write(`
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/jaxprop.perfect_gas.perfect_gas.html#jaxprop.perfect_gas.perfect_gas.viscosity_from_T">viscosity_from_T() (in module jaxprop.perfect_gas.perfect_gas)</a>
+</li>
+      <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.void_fraction">void_fraction (jaxprop.helpers_props.FluidState attribute)</a>
 </li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.volume_fraction_1">volume_fraction_1 (jaxprop.helpers_props.MixtureState attribute)</a>
 </li>
