--- a/genindex.html
+++ b/genindex.html
@@ -311,7 +311,6 @@ document.write(`
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
- | <a href="#Q"><strong>Q</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
@@ -931,18 +930,6 @@ document.write(`
   </ul></td>
 </tr></table>
 
-<h2 id="Q">Q</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.quality_mass">quality_mass (jaxprop.helpers_props.MixtureState attribute)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.quality_volume">quality_volume (jaxprop.helpers_props.MixtureState attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -1059,7 +1046,11 @@ document.write(`
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.BaseState.values">values() (jaxprop.helpers_props.BaseState method)</a>
 </li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.vapor_quality">vapor_quality (jaxprop.helpers_props.FluidState attribute)</a>
+
+      <ul>
+        <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.vapor_quality">(jaxprop.helpers_props.MixtureState attribute)</a>
 </li>
+      </ul></li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.viscosity">viscosity (jaxprop.helpers_props.FluidState attribute)</a>
 
       <ul>
@@ -1071,7 +1062,11 @@ document.write(`
       <li><a href="source/api/jaxprop.perfect_gas.perfect_gas.html#jaxprop.perfect_gas.perfect_gas.viscosity_from_T">viscosity_from_T() (in module jaxprop.perfect_gas.perfect_gas)</a>
 </li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.void_fraction">void_fraction (jaxprop.helpers_props.FluidState attribute)</a>
+
+      <ul>
+        <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.void_fraction">(jaxprop.helpers_props.MixtureState attribute)</a>
 </li>
+      </ul></li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.volume_fraction_1">volume_fraction_1 (jaxprop.helpers_props.MixtureState attribute)</a>
 </li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.volume_fraction_2">volume_fraction_2 (jaxprop.helpers_props.MixtureState attribute)</a>
